--- a/pages/generate_username.html
+++ b/pages/generate_username.html
@@ -16,19 +16,19 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="./index.html">FunGenerator</a>
+            <a class="navbar-brand" href="index.html">FunGenerator</a>
             <ul class="nav ">
                 <li class="nav-item">
-                    <a class="nav-link active" href="./index.html">Home</a>
+                    <a class="nav-link " href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="./pages/generate_password.html">Generate Password</a>
+                    <a class="nav-link " href="./generate_password.html">Generate Password</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/generate_username.html">Generate User Names</a>
+                    <a class="nav-link active" href="./generate_username.html">Generate User Names</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./pages/generate_bill.html">Generate Bill</a>
+                    <a class="nav-link " href="./generate_bill.html">Generate Bill</a>
                 </li>
             </ul>
         </nav>
