--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!--Header-->
     <header>
+        <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="./index.html">FunGenerator</a>
             <ul class="nav ">
@@ -32,7 +33,72 @@
                 </li>
             </ul>
         </nav>
+        <!-- end of navbar-->
+
+        <!-- intro div -->
+
+        <div class="jumbotron intro">
+            <p class="text-center">Assalam Alykoum , Welcome to your app</p>
+            <p class="text-center">in this app you will find the most useful tools</p>
+        </div>
+        <!-- end of intro div-->
+
+        <!-- sections area-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md">
+                    <div class="card">
+                        <img src="./images/password.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center text-info">Password Generator</h5>
+                            <p class="card-text">This app is used to generate password</p>
+                            <a href="./pages/generate_password.html" class="btn btn-success">open App</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <img src="./images/usernames.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center text-info">User Name Generator</h5>
+                            <p class="card-text">This app is used to generate user names</p>
+                            <a href="./pages/generate_username.html" class="btn btn-success">open App</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-md">
+                    <div class="card">
+                        <img src="./images/bill.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title text-center text-info">Bill Generator</h5>
+                            <p class="card-text">This app is used to generate bill jokes</p>
+                            <a href="./pages/generate_bill.html" class="btn btn-success">open App</a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <!-- end of sections area-->
     </header>
+    <!-- end of Header-->
+
+    <!-- main -->
+    <main>
+
+    </main>
+    <!-- end of main -->
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <p class=" text-center">&copy; <a href="#">fungenerator.com</a> , made with <span style="color : red">&hearts;</span>
+                by <a href="https://github.com/larbibaraka">Baraka Larbi</a></span>
+        </div>
+    </footer>
 
 
 
