--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="main.css">
-    <title>FunGenerator</title>
+    <title>EverydayTools</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <header>
         <!-- navbar -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="./index.html">FunGenerator</a>
+            <a class="navbar-brand" href="./index.html">EverydayTools</a>
             <ul class="nav ">
                 <li class="nav-item">
                     <a class="nav-link active" href="./index.html">Home</a>
