--- a/pages/generate_bill.html
+++ b/pages/generate_bill.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="main.css">
-    <title>FunGenerator</title>
+    <title>EverydayTools</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="../index.html">FunGenerator</a>
+            <a class="navbar-brand" href="../index.html">EverydayTools</a>
             <ul class="nav ">
                 <li class="nav-item">
                     <a class="nav-link " href="../index.html">Home</a>
@@ -34,7 +34,14 @@
         </nav>
     </header>
 
-
+    <!-- footer -->
+    <footer class="footer">
+            <div class="container">
+                <p class=" text-center">&copy; <a href="#">fungenerator.com</a> , made with <span style="color : red">&hearts;</span>
+                    by <a href="https://github.com/larbibaraka">Baraka Larbi</a></span>
+            </div>
+        </footer>
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
