--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -7,8 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" href="main.css">
-    <title>FunGenerator</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./generatepass.css">
+    <title>EverydayTools</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">FunGenerator</a>
+            <a class="navbar-brand" href="index.html">EverydayTools</a>
             <ul class="nav ">
                 <li class="nav-item">
                     <a class="nav-link " href="../index.html">Home</a>
@@ -32,13 +33,54 @@
                 </li>
             </ul>
         </nav>
+
+
+
     </header>
+
+    <main>
+        <div class="container">
+
+            <div class="intro-div">
+                <p class="text-muted text-center">PASSWORD GENERATOR TOOL</p>
+                <h1 class="text-danger text-center">Generate Secure password</h1>
+                <h4 class="text-center">Use this online password generator to instantly create a secure, random
+                    password.</h4>
+            </div>
+
+            <div class="passwordArea">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username with two button addons"
+                        aria-describedby="button-addon4">
+                    <div class="input-group-append" id="button-addon4">
+                        <button class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
+                        <button class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+        </div>
+
+    </main>
+
+    <!-- footer -->
+    <footer class="footer">
+        <div class="container">
+            <p class=" text-center">&copy; <a href="#">fungenerator.com</a> , made with <span style="color : red">&hearts;</span>
+                by <a href="https://github.com/larbibaraka">Baraka Larbi</a></span>
+        </div>
+    </footer>
 
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script src="../scripts/passwordGenerator.js"></script>
 </body>
 
 </html>
