--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./generatepass.css">
     <title>EverydayTools</title>
 </head>
@@ -50,16 +51,33 @@
 
             <div class="passwordArea">
                 <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username with two button addons"
-                        aria-describedby="button-addon4">
+                    <input type="text" class="form-control" aria-label="" value="XEJDHD55" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
-                        <button class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
-                        <button class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
+                        <button title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
+                        <button title="generate" class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
                     </div>
                 </div>
-
+                <div class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
             </div>
 
+            <div class="ControlArea">
+                <h3 class="h3">Customize your password</h4>
+                <div class="container">
+                    <div class="col-md-2">
+
+                    </div>
+                    <div class="col-md-4">
+                        
+                        </div>
+                        <div class="col-md-6">
+                        
+                            </div>
+                </div>            
+
+            </div>
 
 
         </div>
