--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         <!-- intro div -->
 
         <div class="jumbotron intro">
-            <p class="text-center">Assalam Alykoum , Welcome to your app</p>
-            <p class="text-center">in this app you will find the most useful tools</p>
+            <h1 class="h1 text-center text-white">Welcome champ to your App Enjoy</h1>
         </div>
         <!-- end of intro div-->
 
