--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -51,7 +51,7 @@
 
             <div class="passwordArea">
                 <div class="input-group">
-                    <input type="text" class="form-control" aria-label="" value="XEJDHD55" aria-describedby="button-addon4">
+                    <input type="text" class="form-control" aria-label="" value="cT!@8YlnNk&m" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
                         <button title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
                         <button title="generate" class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
@@ -65,65 +65,64 @@
 
             <div class="ControlArea">
                 <h3 class="h3">Customize your password</h3>
-                    <hr>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md">
-                                <div class="input-group mb-3">
-                                    <label class="label" for="">Password Length</label>
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <input id="" class="form-control" type="number">
-                                        </div>
-                                        <div class="col-md-8">
-                                            <input type="range" class="custom-range" id="">
-                                        </div>
+                <hr>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="input-group mb-3">
+                                <label class="label" for="">Password Length</label>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <input id="" class="form-control" type="number" value="6">
                                     </div>
-                                </div>
-                            </div>
-                            <div class="col-md">
-                                <div class="password-type">
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" id="radio-1" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="radio-1">Easy to say</label>
+                                    <div class="col-md-8">
+                                        <input type="range" class="custom-range" id="">
                                     </div>
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" id="radio-2" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="radio-2">Easy to read</label>
-                                    </div>
-                                    <div class="custom-control custom-radio">
-                                        <input type="radio" id="radio-3" name="customRadio" class="custom-control-input">
-                                        <label class="custom-control-label" for="radio-3">All characters</label>
-                                    </div>
-                                </div>
-
-
-                            </div>
-                            <div class="col-sm">
-                                <div class="password-type">
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="uppercase">
-                                        <label class="custom-control-label" for="uppercase">Uppercase</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="lowercase">
-                                        <label class="custom-control-label" for="lowercase">Lowercase</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="numbers">
-                                        <label class="custom-control-label" for="numbers">Numbers</label>
-                                    </div>
-                                    <div class="custom-control custom-checkbox">
-                                        <input type="checkbox" class="custom-control-input" id="symbols">
-                                        <label class="custom-control-label" for="symbols">Symbols</label>
-                                    </div>
-
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md">
+                            <div class="password-type">
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="radio-1" name="customRadio" class="custom-control-input">
+                                    <label class="custom-control-label" for="radio-1">Easy to say</label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="radio-2" name="customRadio" class="custom-control-input">
+                                    <label class="custom-control-label" for="radio-2">Easy to read</label>
+                                </div>
+                                <div class="custom-control custom-radio">
+                                    <input type="radio" id="radio-3" name="customRadio" class="custom-control-input">
+                                    <label class="custom-control-label" for="radio-3">All characters</label>
+                                </div>
+                            </div>
 
-      
+
+                        </div>
+                        <div class="col-sm">
+                            <div class="password-type">
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input" id="uppercase">
+                                    <label class="custom-control-label" for="uppercase">Uppercase</label>
+                                </div>
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input" id="lowercase">
+                                    <label class="custom-control-label" for="lowercase">Lowercase</label>
+                                </div>
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input" id="numbers">
+                                    <label class="custom-control-label" for="numbers">Numbers</label>
+                                </div>
+                                <div class="custom-control custom-checkbox">
+                                    <input type="checkbox" class="custom-control-input" id="symbols">
+                                    <label class="custom-control-label" for="symbols">Symbols</label>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
+
+                </div>
 
             </div>
 
