updating generate password

--- a/pages/generate_username.html
+++ b/pages/generate_username.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" href="main.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="./generateusername.css">
     <title>EverydayTools</title>
 </head>
 
@@ -22,30 +24,50 @@
                     <a class="nav-link " href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="./generate_password.html">Generate Password</a>
+                    <a class="nav-link active" href="./generate_password.html">Generate Password</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="./generate_username.html">Generate User Names</a>
+                    <a class="nav-link" href="./generate_username.html">Generate User Names</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./generate_bill.html">Generate Bill</a>
                 </li>
             </ul>
         </nav>
+
     </header>
+
+    <main>
+        <div class="container">
+            <div class="intro-div">
+                <p class="text-muted text-center">User Name GENERATOR TOOL</p>
+                <h1 class="text-danger text-center">Generate Secure password</h1>
+                <h4 class="text-center">Use this online password generator to instantly create a secure, random
+                    password.</h4>
+            </div>
+            <div class="step-1-area">
+
+            </div>
+
+        </div>
+
+    </main>
 
     <!-- footer -->
     <footer class="footer">
-            <div class="container">
-                <p class=" text-center">&copy; <a href="#">fungenerator.com</a> , made with <span style="color : red">&hearts;</span>
-                    by <a href="https://github.com/larbibaraka">Baraka Larbi</a></span>
-            </div>
-        </footer>
-    
+        <div class="container">
+            <p class=" text-center">&copy; <a href="#">fungenerator.com</a> , made with <span style="color : red">&hearts;</span>
+                by <a href="https://github.com/larbibaraka">Baraka Larbi</a></span>
+        </div>
+    </footer>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+    <script src="../scripts/passwordGenerator.js"></script>
 </body>
 
 </html>
