generate password is working

--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -34,8 +34,6 @@
             </ul>
         </nav>
 
-
-
     </header>
 
     <main>
@@ -74,15 +72,15 @@
 
             <div class="passwordArea">
                 <div class="input-group">
-                    <input type="text" class="form-control" aria-label="" value="cT!@8YlnNk&m" aria-describedby="button-addon4">
+                    <input id="password-text" type="text" class="form-control" aria-label="" value="" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
                         <button title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
                         <button title="generate" class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
                     </div>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="100"
-                        aria-valuemin="0" aria-valuemax="100"></div>
+                    <div id="progress-strength" class="progress-bar-striped bg-warning" role="progressbar" style="width: 6%" aria-valuenow="100"
+                        aria-valuemin="0" aria-valuemax="100" ></div>
                 </div>
             </div>
 
@@ -95,11 +93,11 @@
                             <div class="input-group mb-3">
                                 <label class="label" for="">Password Length</label>
                                 <div class="row">
-                                    <div class="col-md-4">
-                                        <input id="" class="form-control" type="number" value="6">
+                                    <div class="col-md-5">
+                                        <input id="length-number" class="form-control" type="number" value="5" min="1" max="30">
                                     </div>
-                                    <div class="col-md-8">
-                                        <input type="range" class="custom-range" id="">
+                                    <div class="col-md-7">
+                                        <input type="range" class="custom-range" id="length-progress" min="1" max="30" value="5">
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +155,7 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container">
-            <p class=" text-center">&copy; <a href="#">fungenerator.com</a> , made with <span style="color : red">&hearts;</span>
+            <p class=" text-center">&copy; <a href="#">everydaytools.com</a> , made with <span style="color : red">&hearts;</span>
                 by <a href="https://github.com/larbibaraka">Baraka Larbi</a></span>
         </div>
     </footer>
