--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -104,17 +104,13 @@
                         </div>
                         <div class="col-md">
                             <div class="password-type">
-                                <div class="custom-control custom-radio">
-                                    <input type="radio" id="radio-1" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="radio-1">Easy to say</label>
+                                <div class="custom-control custom-radio" >
+                                    <input type="radio" id="radio-1" name="options" class="custom-control-input" value="easy" checked>
+                                    <label class="custom-control-label" for="radio-1">Easy</label>
                                 </div>
-                                <div class="custom-control custom-radio">
-                                    <input type="radio" id="radio-2" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="radio-2">Easy to read</label>
-                                </div>
-                                <div class="custom-control custom-radio">
-                                    <input type="radio" id="radio-3" name="customRadio" class="custom-control-input">
-                                    <label class="custom-control-label" for="radio-3">All characters</label>
+                               <div class="custom-control custom-radio">
+                                    <input type="radio" id="radio-2" name="options" class="custom-control-input" value="hard" >
+                                    <label class="custom-control-label" for="radio-2">All characters</label>
                                 </div>
                             </div>
 
@@ -123,19 +119,19 @@
                         <div class="col-sm">
                             <div class="password-type">
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="uppercase">
+                                    <input type="checkbox" class="custom-control-input" id="uppercase" checked>
                                     <label class="custom-control-label" for="uppercase">Uppercase</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="lowercase">
+                                    <input type="checkbox" class="custom-control-input" id="lowercase" checked>
                                     <label class="custom-control-label" for="lowercase">Lowercase</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="numbers">
+                                    <input type="checkbox" class="custom-control-input" id="numbers" disabled>
                                     <label class="custom-control-label" for="numbers">Numbers</label>
                                 </div>
                                 <div class="custom-control custom-checkbox">
-                                    <input type="checkbox" class="custom-control-input" id="symbols">
+                                    <input type="checkbox" class="custom-control-input" id="symbols" disabled>
                                     <label class="custom-control-label" for="symbols">Symbols</label>
                                 </div>
 
