adding the generate method to button

--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -74,8 +74,8 @@
                 <div class="input-group">
                     <input id="password-text" type="text" class="form-control" aria-label="" value="" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
-                        <button title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
-                        <button title="generate" class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
+                        <button  title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
+                        <button id="generateNewpassword" title="generate" class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
                     </div>
                 </div>
                 <div class="progress">
