--- a/pages/generate_password.html
+++ b/pages/generate_password.html
@@ -74,7 +74,7 @@
                 <div class="input-group">
                     <input id="password-text" type="text" class="form-control" aria-label="" value="" aria-describedby="button-addon4">
                     <div class="input-group-append" id="button-addon4">
-                        <button  title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
+                        <button data-clipboard-target="#password-text" id="copypassword" title="copy" class="btn btn-outline-secondary" type="button"><i class="far fa-clone"></i></button>
                         <button id="generateNewpassword" title="generate" class="btn btn-outline-secondary" type="button"><i class="fas fa-sync-alt"></i></button>
                     </div>
                 </div>
@@ -161,6 +161,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.0/clipboard.min.js"></script>
 
     <script src="../scripts/passwordGenerator.js"></script>
 </body>
